@@ -1,9 +1,8 @@
 <?php
 /*
- * This is the server side code for the AJAX myGameList call.
+ * This is the server side code for the AJAX allGameList call.
  * 
- * It produces the data needed to create a list of all games
- * that the signed in player is playing.
+ * It produces the data needed to create a list of all games.
  * 
  * There are no input parameters.
  *
@@ -23,7 +22,7 @@
  *     ]
  *   }
  *
- * Copyright (c) 2013 Richard E. Price under the The MIT License.
+ * Copyright (c) 2014 Richard E. Price under the The MIT License.
  * A copy of this license can be found in the LICENSE.text file.
  */
 require_once('auth.php');
@@ -58,14 +57,11 @@ if (mysqli_connect_error()) {
 }
 
 $you = intval($_SESSION['SESS_PLAYER_ID']);
-$qry = "SELECT b.game_id, b.gname, c.bname, 
-               c.version, DATE(b.start_date) 
-          FROM game_player AS a 
-            JOIN (game AS b, box AS c)
-              ON (a.player_id = $you
-                AND a.game_id = b.game_id
-                AND b.box_id = c.box_id)
-          ORDER BY b.start_date DESC";
+$qry = "SELECT a.game_id, a.gname, b.bname, 
+               b.version, DATE(a.start_date) 
+          FROM game AS a JOIN box AS b
+               ON a.box_id = b.box_id
+          ORDER BY a.start_date DESC";
   $result = mysqli_query($link,$qry);
 if ($result) {
   if (mysqli_num_rows($result) === 0) { // no games.
