@@ -13,7 +13,7 @@
 var BD18 = {};
 BD18.noteTimeout = null; // Used by doLogNote().
 BD18.welcomename = null; // Used by doLogNote().
-BD18.help = "http://wiki.board18.org/w/Player%27s_Guide_V0.3";
+BD18.help = "http://wiki.board18.org/w/Player%27s_Guide_V0.5";
 
 /* Function setPage() adjusts the height and width
  * of rightofpage and the height of lefttofpage.
